# loan-default-predictor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml
.github/workflows/: cd.yml  ci.yml
configs/: default.yaml
data/: README.md
notebooks/: 01_eda.ipynb
src/: __init__.py
src/data/: ingest.py  preprocess.py
src/models/: loan_model.py  trainer.py
src/serving/: app.py  schemas.py
tests/: conftest.py  test_api.py  test_loan_model.py  test_plumbing_imports.py  test_preprocess.py
